--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.6.7",
+    "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
+    "swr": "^2.2.4",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -28,8 +31,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-    ]
+    "extends": []
   },
   "browserslist": {
     "production": [
