--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "styled-components": "^5.3.10",
     "swr": "^2.2.4",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
